--- a/.github/actions/deploy-s3-js/action.yml
+++ b/.github/actions/deploy-s3-js/action.yml
@@ -1,5 +1,16 @@
 name: 'Deploy to AWS S3'
 description: 'Deploy a static website to AWS S3'
+inputs:
+  bucket:
+    description: the S3 bucket name
+    required: true
+  region:
+    description: the AWS region where the bucket is
+    required: false
+    default: ca-central-1
+  dist-folder:
+    description: path to the folder containing the deployable files
+    required: true
 runs:
   using: 'node20'
   main: 'main.js'
