--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,6 +63,7 @@ jobs:
       - name: Output contents
         run: ls
       - name: Deploy site
+        id: deploy
         uses: ./.github/actions/deploy-s3-js
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -71,3 +72,6 @@ jobs:
           bucket: github-action-js
           dist-folder: ./dist
           # region: ca-central-1
+      - name: Output info
+        run: |
+          echo "Live URL: ${{ steps.deploy.outputs.website-url }}"
